deleting and renaming codescape to index.

--- a/Quizes/c++quiz.html
+++ b/Quizes/c++quiz.html
@@ -44,7 +44,7 @@
                 <div class="modal ">
                     <h1>Your score is</h1>
                     <h2 value="0" id="zero">0 / 5</h2>
-                    <a href="/codescape.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </div>
             </div>
             <div class="content-question">
