--- a/Subjects/c++.html
+++ b/Subjects/c++.html
@@ -27,7 +27,7 @@
     <script src="./back.js" defer></script>
     <script src="/codescape.js"></script>
     <link rel="stylesheet" href="/preload.css" />
-    <title>Codescape with C++ </title>
+    <title>C++ with Codescape</title>
 </head>
 <body>
   
@@ -47,9 +47,7 @@
               <p id="messagebox">Student: Professor! I'm interested in learning on how to code in C++. Can you help me get started?</p>
              <p id="paragraph"></p>
           </div>
-           <!-- <div class="next-btn">
-                <button onclick="switchchar()">Next</button>
-              </div> -->
+          
               <div class="btn-conteiner next-btn">
                 <a class="btn-content" href="#" onclick="switchchar()"  id="btn-click-next">
                   <span class="btn-title">Next</span>
