--- a/process.html
+++ b/process.html
@@ -37,7 +37,7 @@
   </div>
     <header>
         <nav>
-          <div class="logo-title"><a href="/codescape.html">CODESCAPE</a></div>
+          <div class="logo-title"><a href="/index.html">CODESCAPE</a></div>
           <div class="nav-list">
             <li><a href="codescape.html" class="nav-content">Home</a></li>
           </div>
@@ -96,7 +96,7 @@
         <footer class="footer-container">
             <div class="footer-wrapper">
                 <div class="footer-first">
-                  <a href="#">CODESCAPE</a>
+                  <a href="/index.html">CODESCAPE</a>
                   <p>
                     A Text-Based Web Game to Introducing Coding Languages. 
                     Codescape is an innovative online platform for interactive
@@ -105,9 +105,7 @@
                 </div>
                 <div class="footer-second">
                   <h1>Quick Link</h1>
-                  <a href="/codescape.html">Home</a>
-                  <a href="/codescape.html">About</a>
-                  <a href="#">Process</a>
+                  <a href="/index.html">Home</a>
                 </div>
               
                 <div class="footer-third">
