--- a/footer/terms.html
+++ b/footer/terms.html
@@ -36,9 +36,9 @@
       <main>
         <header>
             <nav>
-              <div class="logo-title"><a href="/codescape.html">CODESCAPE</a></div>
+              <div class="logo-title"><a href="/index.html">CODESCAPE</a></div>
               <div class="nav-list">
-                <li><a href="/codescape.html" class="nav-content">Home</a></li>
+                <li><a href="/index.html" class="nav-content">Home</a></li>
               </div>
            
             </nav>
