--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     <title>Codescape</title>
   </head>
   <body>
-
-    <div class="slider">
-      <div></div>
-      <div></div>
-      <h1 id="title-heading">Loading Assets</h1> 
-    </div>
+    
   
     <header>
       <nav>
@@ -54,7 +49,7 @@
     <main>
  
       <div class="hero-section" id="home">
-        <div class="character fade-out">
+        <div class="character ">
           <h1 id="text-parallax">CODESCAPE</h1>
           <img src="./images/character.png" alt=""  id="parallax">
         
@@ -315,7 +310,7 @@
       </section>
 
       <section class="dev-container">
-        <h1 class="title-var">Executive Team</h1>
+        <h1 class="title-var" style="padding-top: 25px">Executive Team</h1>
         <div class="dev-cards logos" id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
           <div class="individual-cards image">
             <div class="circle-img">
