--- a/footer/services.html
+++ b/footer/services.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/footer/services.css">
+    <link rel="stylesheet" href="services.css">
     <script src="/codescape.js"></script>
     <title>Services | Codescape</title>
 </head>
