--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <title>Codescape</title>
   </head>
   <body>
-    
+    <div class="slider" id="overflow">
+      <div></div>
+      <div></div>
+      <h1 id="title-heading">Loading Assets</h1> 
+    </div>
   
     <header>
       <nav>
@@ -50,8 +54,10 @@
  
       <div class="hero-section" id="home">
         <div class="character ">
-          <h1 id="text-parallax">CODESCAPE</h1>
-          <img src="./images/character.png" alt=""  id="parallax">
+          <h1>CODESCAPE</h1>
+         <div class="main-character">
+           <img src="./images/Dean.png" alt="">
+         </div>
         
 
           <div class="play-btn">
@@ -110,7 +116,7 @@
             <div class="card-wrapper">
               <div class="availability-btn">Free</div>
               <div class="thumbnail-image">
-                <a href="/Subjects/c++.html" target="_blank">
+                <a href="./Subjects/c++.html" target="_blank">
                   <img src="./images/Thumbnail 1.png" alt="Thumbnail Image" />
                 </a>
               </div>
