--- a/Quizes/c++quiz.html
+++ b/Quizes/c++quiz.html
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="slider">
+    <div class="slider" id="overflow">
       <div></div>
       <div></div>
       <h1 id="title-heading">Loading Assets</h1> 
