--- a/Subjects/c++.html
+++ b/Subjects/c++.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   
-  <div class="slider">
+  <div class="slider" id="overflow">
     <div></div>
     <div></div>
     <h1 id="title-heading">Loading Assets</h1> 
